UI Responsiveness - Training
- Training now generate amazing animation :>

--- a/idle.html
+++ b/idle.html
@@ -253,13 +253,13 @@
 			<div class = "task_window" id="training_window">
 				<table id="training_table">
 					<tr>
-						<th style="width: 50%;">Strength
+						<th id="training_block_strength" style="width: 50%;">Strength
 							<div id="training_strength_xp">XP: </div>
 							<div>
 								<button id="train_strength">TRAIN</button>
 							</div>
 						</th>
-						<th style="width: 50%;">Dexterity
+						<th id="training_block_dexterity" style="width: 50%;">Dexterity
 							<div id="training_dexterity_xp">XP: </div>
 							<div>
 								<button id="train_dexterity">TRAIN</button>
@@ -267,13 +267,13 @@
 						</th>
 					</tr>
 					<tr>
-						<th style="width: 50%;">Stamina
+						<th id="training_block_stamina" style="width: 50%;">Stamina
 							<div id="training_stamina_xp">XP: </div>
 							<div>
 								<button id="train_stamina">TRAIN</button>
 							</div>
 						</th>
-						<th style="width: 50%;">Intelligence
+						<th id="training_block_intelligence" style="width: 50%;">Intelligence
 							<div id="training_intelligence_xp">XP: </div>
 							<div>
 								<button id="train_intelligence">TRAIN</button>
