--- a/idle.html
+++ b/idle.html
@@ -397,14 +397,14 @@
 					</span>
 					<span style="width: 2%;"></span>
 					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="tavern">
-						<div>Tavern</div>
+						<div style="font-size: xx-large;">Tavern</div>
 						<button id="tavernButton">ENTER</button>
 					</span>
 				</div>
 				
 				<!-- POTION SELLER (SHOP) -->
 				<div class="task_window" id="potion_seller_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
-					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div class="shops_item_row">
 							<span style="width: 45%; display: flex; justify-content: center;">
 								NAME
@@ -445,14 +445,14 @@
 							</span>
 						</div>
 					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
 						<button class="shop_window_button_back">Go Back</button>
 					</div>
 				</div>
 
 				<!-- CHURCH (SHOP) -->
 				<div class="task_window" id="church_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
-					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div class="shops_item_row">
 							<span style="width: 25%; display: flex; justify-content: center;">
 								NAME
@@ -503,13 +503,13 @@
 							</span>
 						</div>
 					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
 						<button class="shop_window_button_back">Go Back</button>
 					</div>
 				</div>
 				<!-- TAVERN (SHOP) -->
 				<div class="task_window" id="tavern_window" style="display: none; flex-direction: column; align-items: center;">
-					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div class="shops_item_row">
 							<span style="width: 25%; display: flex; justify-content: center;">
 								NAME
@@ -543,7 +543,7 @@
 							</span>
 						</div>
 					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
 						<button class="shop_window_button_back">Go Back</button>
 					</div>
 				</div>
