UI responsiveness - Shops refactor
- Fully refactored how shop content is being generated. Now it's fully dynamic inside javascript.
- Now buffs in shop will be unlocked with player level.
- Changed timers on buffs and some values, I don't remember tbh, it's big commit xD

--- a/idle.html
+++ b/idle.html
@@ -36,7 +36,7 @@
 	<script defer src="healing.js?v=39"></script>
 	<script defer src="training.js?v=39"></script>
 	<script defer src="questing.js?v=39"></script>
-	<script defer src="shops.js?v=39"></script>
+	<script defer src="shops/shops.js?v=39"></script>
 	<script defer src="smith.js?v=39"></script>
 	<script defer src="dungeonAllies.js?v=39"></script>
 	<script defer src="dungeon.js?v=39"></script>
@@ -382,172 +382,8 @@
 				<div style="padding-left: 2px;">Armour power reduces damage received at half of it's power (rounded down). (still min dmg received is 1)</div>
 			</div>
 
-			<!-- SHOPS -->
-			<div class = "task_window" id="shop_window" style="display: none;">
-				<!-- SHOP SELECTION -->
-				<div id="shop_window_selection" style="width: 100%; height: 100%;">
-					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="potion_seller">
-						<div>Potion Seller</div>
-						<button id="potionSellerButton">ENTER</button>
-					</span>
-					<span style="width: 2%;"></span>
-					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="church_buffer">
-						<div>Church</div>
-						<button id="churchButton">ENTER</button>
-					</span>
-					<span style="width: 2%;"></span>
-					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="tavern">
-						<div style="font-size: xx-large;">Tavern</div>
-						<button id="tavernButton">ENTER</button>
-					</span>
-				</div>
-				
-				<!-- POTION SELLER (SHOP) -->
-				<div class="task_window" id="potion_seller_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
-					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-						<div class="shops_item_row">
-							<span style="width: 45%; display: flex; justify-content: center;">
-								NAME
-							</span>
-							<span style="width: 30%; display: flex; justify-content: center;">
-								PRICE
-							</span>
-							<span style="width: 25%; display: flex; justify-content: center;">
-								<div>
-								</div>
-							</span>
-						</div>
-
-						<div class="shops_item_row">
-							<span style="width: 45%; display: flex; justify-content: center;">
-								HEALTH POTION
-							</span>
-							<span style="width: 30%; display: flex; justify-content: center;">
-								2000
-							</span>
-							<span style="width: 25%; display: flex; justify-content: center;">
-								<div>
-									<button class="buyItemButton" itemId="0">BUY</button>
-								</div>
-							</span>
-						</div>
-						<div class="shops_item_row">
-							<span style="width: 45%; display: flex; justify-content: center;">
-								HEALTH POTION USAGE TRESHHOLD
-							</span>
-							<span style="width: 30%; display: flex; justify-content: center;">
-								<div style="display: flex; justify-content: center; align-items: center;">
-									<input id="shop_health_potion_slider" type="range" min="0" max="99" value="50">
-								</div>
-							</span>
-							<span id="shop_health_potion_percentage" style="width: 25%; display: flex; justify-content: center;">
-								50%
-							</span>
-						</div>
-					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
-						<button class="shop_window_button_back">Go Back</button>
-					</div>
-				</div>
-
-				<!-- CHURCH (SHOP) -->
-				<div class="task_window" id="church_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
-					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-						<div class="shops_item_row">
-							<span style="width: 25%; display: flex; justify-content: center;">
-								NAME
-							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
-								DESCRIPTION
-							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
-								PRICE
-							</span>
-							<span style="width: 10%; display: flex; justify-content: center;">
-								<div>
-								</div>
-							</span>
-						</div>
-
-						<div class="shops_item_row">
-							<span style="width: 25%; display: flex; justify-content: center;">
-								+ 10 DAMAGE BLESSING
-							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
-								Applies additional damage. 60 min duration.
-							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
-								500
-							</span>
-							<span style="width: 10%; display: flex; justify-content: center;">
-								<div>
-									<button class="buyBuffButton" buffId="churchDamage" cost="500">BUY</button>
-								</div>
-							</span>
-						</div>
-					
-						<div class="shops_item_row">
-							<span style="width: 25%; display: flex; justify-content: center;">
-								+ 10 DEFENSE BLESSING
-							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
-								Reduces damage by flat rate. 60 min duration.
-							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
-								500
-							</span>
-							<span style="width: 10%; display: flex; justify-content: center;">
-								<div>
-									<button class="buyBuffButton" buffId="churchDefense" cost="500">BUY</button>
-								</div>
-							</span>
-						</div>
-					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
-						<button class="shop_window_button_back">Go Back</button>
-					</div>
-				</div>
-				<!-- TAVERN (SHOP) -->
-				<div class="task_window" id="tavern_window" style="display: none; flex-direction: column; align-items: center;">
-					<div style="width: 80%; height: 90%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-						<div class="shops_item_row">
-							<span style="width: 25%; display: flex; justify-content: center;">
-								NAME
-							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
-								DESCRIPTION
-							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
-								PRICE
-							</span>
-							<span style="width: 10%; display: flex; justify-content: center;">
-								<div>
-								</div>
-							</span>
-						</div>
-
-						<div class="shops_item_row">
-							<span style="width: 25%; display: flex; justify-content: center;">
-								+5 DAMAGE
-							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
-								Stuffs you with spicy food. You feel pain. 20 min duration.
-							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
-								500
-							</span>
-							<span style="width: 10%; display: flex; justify-content: center;">
-								<div>
-									<button class="buyBuffButton" buffId="spicyFood" cost="500">BUY</button>
-								</div>
-							</span>
-						</div>
-					</div>
-					<div style="display: flex; align-items: center; justify-content: center; height: 10%; width: 100%; border-top:#000 solid 1px">
-						<button class="shop_window_button_back">Go Back</button>
-					</div>
-				</div>
-			</div>
+			<!-- SHOPS (fully generated in code in shops/shops.js) -->
+			<div class = "task_window" id="shop_window" style="display: none;"></div>
 
 			<!-- SMITH -->
 			<div class ="task_window" id="smith_window" style="display: none; flex-direction: column; align-items: center;">
