--- a/idle.html
+++ b/idle.html
@@ -253,28 +253,40 @@
 			<div class = "task_window" id="training_window">
 				<table id="training_table">
 					<tr>
-						<th id="training_block_strength" style="width: 50%;">Strength
-							<div id="training_strength_xp">XP: </div>
+						<th id="training_block_strength" style="width: 50%;">
+							<div id="training_block_text_strength">
+								Strength
+								<div id="training_strength_xp">XP: </div>
+							</div>
 							<div>
 								<button id="train_strength">TRAIN</button>
 							</div>
 						</th>
-						<th id="training_block_dexterity" style="width: 50%;">Dexterity
-							<div id="training_dexterity_xp">XP: </div>
+						<th id="training_block_dexterity" style="width: 50%;">
+							<div id="training_block_text_dexterity">
+								Dexterity
+								<div id="training_dexterity_xp">XP: </div>
+							</div>
 							<div>
 								<button id="train_dexterity">TRAIN</button>
 							</div>
 						</th>
 					</tr>
 					<tr>
-						<th id="training_block_stamina" style="width: 50%;">Stamina
-							<div id="training_stamina_xp">XP: </div>
+						<th id="training_block_stamina" style="width: 50%;">
+							<div id="training_block_text_stamina">
+								Stamina
+								<div id="training_stamina_xp">XP: </div>
+							</div>
 							<div>
 								<button id="train_stamina">TRAIN</button>
 							</div>
 						</th>
-						<th id="training_block_intelligence" style="width: 50%;">Intelligence
-							<div id="training_intelligence_xp">XP: </div>
+						<th id="training_block_intelligence" style="width: 50%;">
+							<div id="training_block_text_intelligence">
+								Intelligence
+								<div id="training_intelligence_xp">XP: </div>
+							</div>
 							<div>
 								<button id="train_intelligence">TRAIN</button>
 							</div>
