--- a/idle.html
+++ b/idle.html
@@ -515,13 +515,13 @@
 							<div style="display: flex; width: 95%; height: 50%;">
 								<span class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center;width: 49%;">
 									<div>PITTY</div>
-									<div id ="smithInfo_pitty">0/0</div>
+									<div id ="smithInfo_pitty"></div>
 								</span>
 								<span style="width: 2%;"></span>
 								<span class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center;width: 49%;">
 									<div>UPGRADE</div>
 									<div>CHANCE</div>
-									<div id="smithInfo_upgradeChance">0%</div>
+									<div id="smithInfo_upgradeChance"></div>
 								</span>
 							</div>
 							<div style="height: 5%;"></div>
