--- a/idle.html
+++ b/idle.html
@@ -585,7 +585,7 @@
 						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
-							<div>DPS NR.2</div>
+							<div>DPS #2</div>
 							<div id="dungeon_dps2Power">POWER: 250</div>
 							<div id="dungeon_dps2Status" class="space"></div>
 							<div class="dungeon_hpBarOutside">
@@ -595,7 +595,7 @@
 						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
-							<div>DPS NR.3</div>
+							<div>DPS #3</div>
 							<div id="dungeon_dps3Power">POWER: 250</div>
 							<div id="dungeon_dps3Status" class="space"></div>
 							<div class="dungeon_hpBarOutside">
