--- a/idle.html
+++ b/idle.html
@@ -625,8 +625,17 @@
 				<button id="fishing_cast_button" style="padding: 20px 40px; font-size: x-large; font-weight: bold;">CAST</button>
 				
 				<div style="width: 50%; text-align: center; margin-bottom: 2%;">
-					<div>Fishing Level: <span id="fishing_level">1</span></div>
-					<div>XP: <span id="fishing_xp">0/50</span></div>
+					<div>Fishing Level: 
+						<span id="fishing_level">
+							1
+						</span>
+					</div>
+					<div id="fishing_xp_div">
+						XP: 
+						<span id="fishing_xp">
+							0/50
+						</span>
+					</div>
 				</div>
 			</div>
 
