--- a/idle.html
+++ b/idle.html
@@ -658,4 +658,10 @@
 			</div>
 		</div>
 	</div>
+	<!-- The place where I put all links and beg for donations xD -->
+	<div id="shill_zone">
+		<a style="padding-left: 4px; color: white" href="https://xeiciu.com/">xeiciu.com</a>
+		<a style="padding-left: 20px; color: white" href="https://steamcommunity.com/tradeoffer/new/?partner=1060770971&token=xQtJUOY0">Donate Steam Items/Games</a>
+		<a style="padding-left: 20px; color: white" href="https://github.com/Xeit/IdleMMO/commits/main/">Changelog + Source Code</a>
+	</div>
 </body>
