Shill zone - hidden by default
- Ok it was a bit annoying and too close to functional buttons. It's hidden by default now.

--- a/idle.html
+++ b/idle.html
@@ -660,8 +660,11 @@
 	</div>
 	<!-- The place where I put all links and beg for donations xD -->
 	<div id="shill_zone">
-		<a style="padding-left: 4px; color: white" href="https://xeiciu.com/">xeiciu.com</a>
-		<a style="padding-left: 20px; color: white" href="https://steamcommunity.com/tradeoffer/new/?partner=1060770971&token=xQtJUOY0">Donate Steam Items/Games</a>
-		<a style="padding-left: 20px; color: white" href="https://github.com/Xeit/IdleMMO/commits/main/">Changelog + Source Code</a>
+		<button id="shill_zone_button" style="font-size: smaller;">LINKS</button>
+		<div id="shill_zone_content" style="display: none;">
+			<a style="padding-left: 20px; color: white" href="https://xeiciu.com/">xeiciu.com</a>
+			<a style="padding-left: 20px; color: white" href="https://steamcommunity.com/tradeoffer/new/?partner=1060770971&token=xQtJUOY0">Donate Steam Items/Games</a>
+			<a style="padding-left: 20px; color: white" href="https://github.com/Xeit/IdleMMO/commits/main/">Changelog + Source Code</a>
+		</div>
 	</div>
 </body>
