Fix for unclickable control buttons
- When screen was not big enough parent div was overlaying left control buttons

--- a/idle.html
+++ b/idle.html
@@ -642,7 +642,7 @@
 
 			<!-- Buttons at the bottom of the screen -->
 			<div id = "control_buttons">
-				<span style="display: flex; width: 50%;">
+				<span style="display: flex; width: 50%; pointer-events: none;">
 					<button id="battleButton" style="display: none;">BATTLE</button>
 					<button id="questingButton">QUESTS</button>
 					<button id="recoverHealthButton" style="display: none;">HEAL</button>
@@ -650,7 +650,7 @@
 					<button id="dungeonButton" style="display: none;">DUNGEONS</button>
 					<button id="fishingButton" style="display: none;">FISHING</button>
 				</span>
-				<span style="display: flex; flex-direction: row-reverse; width: 50%;">
+				<span style="display: flex; flex-direction: row-reverse; width: 50%; pointer-events: none;">
 					<button id="equipmentButton" style="display: none;">EQ</button>
 					<button id="shopButton" style="display: none;">SHOPS</button>
 					<button id="smithButton" style="display: none;">SMITH</button>
