Fishing is more rewarding
- Added information about expected gold earned from fishing.
- Made fishing a lot more rewarding in terms of gold.

--- a/idle.html
+++ b/idle.html
@@ -619,6 +619,7 @@
 				</div>
 				
 				<div id="fishing_status" style="font-size: x-large; font-weight: bold; height: 10%;">Ready</div>
+				<div id="fish_price">Fish price 50 - 500</div>
 
 				<div id="fishing_afk_bar" style="display: flex; height: 5%; width: 50%; align-items: center; justify-content: center; border: 2px solid #000; border-radius: 10px; background: linear-gradient(179deg, #454545, #6b6b6b); background-size: 0% 100%; background-repeat: no-repeat;">AFK ACTION</div>
 
